# local-ai-agent

./: app.py  explore_langchain_core.py  langchain_example.py  pyproject.toml  requirements.txt  server.py
cog/: agent.py  config.py  models.py  remote_embedder.py
data/: profile.md
src/: app.py  server.py
