[project]
name = "local-ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckduckgo-search>=8.0.2",
    "faiss-cpu>=1.11.0",
    "fastembed>=0.7.0",
    "langchain>=0.3.25",
    "langchain-community>=0.3.24",
    "langchain-core>=0.3.0",
    "langchain-experimental>=0.3.4",
    "langchain-mcp-adapters>=0.1.7",
    "langchain-ollama>=0.3.3",
    "langgraph>=0.4.8",
    "mcp>=1.9.3",
    "ollama>=0.5.1",
    "pydantic>=2.11.5",
    "pypdfium>=0.0.15",
    "pypdfium2>=4.30.1",
    "rich>=14.0.0",
    "streamlit>=1.45.1",
    "watchdog>=6.0.0",
]

[project.optional-dependencies]
dev = [
   "watchdog>=6.0.0",
   "ruff>=0.11.12",
]
[tool.uv.workspace]
